# codex-meta-repo

./: .cursorignore  .editorconfig  .env.example  .gitignore  .gitleaks.toml  .gitmodules  Makefile  README.md  REPOSITORY_AUDIT_REPORT.md  SECURITY.md  mcp_catalog.html  mcp_script.js  package.json  pnpm-lock.yaml
.devconatiner/: devcontainer.json  docker-compose.yml
.devcontainer/: Dockerfile  README.md  devcontainer.json  docker-compose.yml  post-create.sh
.github/workflows/: ci.yaml
.husky/: pre-commit
U-DIG-IT/backend/: README.md  env.example  main.py  pyproject.toml  pytest.ini  u_dig_it.db
U-DIG-IT/backend/app/: config.py  database.py  dependencies.py  models.py  models_backup.py  models_simple.py  schemas.py  security.py
U-DIG-IT/backend/app/routers/: __init__.py  analytics.py  auth.py  catalog.py  reservations.py
U-DIG-IT/backend/app/services/: __init__.py  catalog_service.py  reservation_service.py  seed_data.py
U-DIG-IT/backend/app/utils/: identifiers.py
U-DIG-IT/backend/tests/: __init__.py  conftest.py
U-DIG-IT/backend/tests/integration/: test_api.py
U-DIG-IT/backend/tests/unit/: test_auth.py
U-DIG-IT/docs/: README.md  architecture.md
U-DIG-IT/frontend/: README.md  index.html  package.json  pnpm-lock.yaml  vitest.config.ts
U-DIG-IT/frontend/scripts/: sentry-smoke.mjs
U-DIG-IT/frontend/src/: App.tsx  main.tsx
U-DIG-IT/frontend/src/api/: client.ts  endpoints.ts  schemas.ts
U-DIG-IT/frontend/src/components/layout/: AppLayout.tsx  Footer.tsx  Navigation.tsx  ProtectedRoute.tsx
U-DIG-IT/frontend/src/components/sections/: CTASection.tsx  CategoryShowcase.tsx  HeroSection.tsx  TestimonialsSection.tsx  WorkflowSection.tsx
U-DIG-IT/frontend/src/components/ui/: Badge.tsx  Button.tsx  Card.tsx  InputField.tsx  SectionHeading.tsx  Tag.tsx
U-DIG-IT/frontend/src/contexts/: AuthContext.tsx
U-DIG-IT/frontend/src/hooks/: useCatalog.ts  useDashboard.ts  useEquipmentDetail.ts  useLandingStats.ts  useLocations.ts
U-DIG-IT/frontend/src/pages/: AboutPage.tsx  CatalogPage.tsx  ContactPage.tsx  DashboardPage.tsx  EquipmentDetailPage.tsx  HomePage.tsx  LoginPage.tsx  RegisterPage.tsx  SolutionsPage.tsx
U-DIG-IT/frontend/src/styles/: global.css
U-DIG-IT/frontend/src/test/: setup.ts
U-DIG-IT/frontend/src/test/components/: Button.test.tsx
U-DIG-IT/frontend/src/types/: index.ts
U-DIG-IT/frontend/src/utils/: formatters.ts
docs/: CONTEXT_INDEX.md  DEVELOPMENT.md  architecture.md  integration-guides.md  repo-capabilities.md
docs/mcp/: OVERVIEW.md  airtable-mcp-server.md  atlassian.md  couchbase.md  dockerhub.md  duckduckgo.md  elasticsearch.md  explorium.md  fetch.md  git.md  github-official.md  gmail-mcp.md  google-maps-comprehensive.md  grafana.md  heroku.md  maestro-mcp-server.md  mcp-reddit.md  mongodb.md  neon.md  notion.md  puppeteer.md  rust-mcp-filesystem.md  simplechecklist.md  stripe.md
scripts/: fetch-context.sh
(+1 files in other folders)
