[project]
name = "backend"
version = "0.1.0"
description = ""
authors = [
    {name = "nickbaxter18",email = "nick_hockey7@hotmail.com"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi (>=0.117.1,<0.118.0)",
    "uvicorn (>=0.37.0,<0.38.0)",
    "sentry-sdk (>=2.39.0,<3.0.0)",
    "python-dotenv (>=1.1.1,<2.0.0)",
    "sqlmodel (>=0.0.22,<0.0.23)",
    "pydantic-settings (>=2.6.1,<3.0.0)",
    "passlib[bcrypt] (>=1.7.4,<2.0.0)",
    "python-jose[cryptography] (>=3.3.0,<4.0.0)",
    "python-multipart (>=0.0.18,<0.1.0)",
    "psycopg[binary] (>=3.1.18,<4.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
